// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. test example one 1`] = `
<Text>
  This is the 
  first
   test
</Text>
`;

exports[`2. text example two 1`] = `
<Text>
  This is the 
  second
   test
</Text>
`;
